tests/ui/argument-suggestions/too-long.stderr
error[E0308]: mismatched types
  --> $DIR/too-long.rs:37:28
   |
LL |     qux.foo(a, b, c, d, e, f, g, h, i, j, k, l);
   |         ---                ^ expected `i32`, found `&i32`
   |         |
   |         arguments to this method are incorrect
   |
note: method defined here
  --> $DIR/too-long.rs:4:8
   |
LL |     fn foo(
   |        ^^^
LL |         &self,
LL |         a: i32,
   |         ------
LL |         b: i32,
   |         ------
LL |         c: i32,
   |         ------
LL |         d: i32,
   |         ------
LL |         e: i32,
   |         ------
LL |         f: i32,
   |         ------
LL |         g: i32,
   |         ------
LL |         h: i32,
   |         ------
LL |         i: i32,
   |         ------
LL |         j: i32,
   |         ------
LL |         k: i32,
   |         ------
LL |         l: i32,
   |         ------
help: consider dereferencing the borrow
   |
LL |     qux.foo(a, b, c, d, e, *f, g, h, i, j, k, l);
   |                            +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
